finished, fixed calculate, my bookings
