# app/Http/Controllers/UserFlowController.php
@@ -12,15 +12,19 @@ use App\Http\Requests\CalculateRequest;
 use App\Models\HistoryBooking;
 use Illuminate\Support\Facades\Auth;
 
+/**
+ * @group Api's for users flow
+ */
 class UserFlowController extends Controller
 {
+    /**
+     * Get all information about location, room
+     */
     public function getLocationsWithRooms(Pagination $request)
     {
-        $data = Location::with([
-            'rooms' =>
-            function ($query) {
-                $query->withCount([
-                    "blocks" => function ($query) {
+        $data = Location::with([ 'rooms' =>
+            function ( $query ) {
+                $query->withCount( ["blocks" => function ($query) {
                         $query->whereNull("user_id");
                     }
                 ]);
@@ -33,54 +37,62 @@ class UserFlowController extends Controller
         ]);
     }
 
+    /**
+     * calculate area, sum of blocks
+     */
     public function Calculate(CalculateRequest $request, $location_id)
     {
-        $amount = $request->width * $request->height * $request->length;
-        $room = Room::where('location_id', $location_id)->with("location")->get()->toArray();
+        $asked_area = $request->width * $request->height * $request->length;
+        $room = Room::where('location_id', $location_id)->where('temperature',$request->temperature)->with("location")->get()->toArray();
 
         $arr = [];
-        $sum = 0;
-        $price = 0;
+
+        $general_area = 0;
+        $general_amount = 0;
         foreach ($room as $value) {
-            if ($sum >= $amount) break;
+            if ($general_area >= $asked_area) break;
+            $price = 0;
             $blocks = Block::where('room_id', $value['id'])->get()->toArray();
             foreach ($blocks as $value1) {
+                if ($general_area >= $asked_area) break;
 
-                if ($sum >= $amount) break;
+                $general_area += $value1['width'] * $value1['height'] * $value1['length'];
 
-                $sum += $value1['width'] * $value1['height'] * $value1['length'];
-
+                $value1["general_price"] = $value1['price'] * $request->to_date;
                 $value['blocks'][] = $value1;
-                $price += $value1['price'];
+                $price += $value1['general_price'];
             }
-            if (!$value['blocks']) break;
             $value['blocks_count'] = count($value['blocks']);
             $value['general_price'] = $price;
+            $general_amount += $value['general_price'];
             $arr[] = $value;
         }
 
         return response_success([
             "ok" => true,
             "data" => $arr,
-            "general_area" => $sum,
-            "asked_area" => $amount,
+            "general_area" => $general_area,
+            "asked_area" => $asked_area,
+            "general_price" => $general_amount,
         ]);
     }
 
-    public function Booking(BookingRequest $request)
+    /**
+     * Book blocks
+     */
+    public function BookBlocks(BookingRequest $request)
     {
         foreach ($request->id as $value) {
 
 
             if(Block::find($value)->user_id != null) {
-
                 return response_error("block with id = $value is already booked",403);
-
             }
 
             Block::where("id", $value)->update([
                 "user_id" => Auth::user()->id,
                 "start_date_booking" => date("Y-m-d"),
+                "booking_day" => $request->booking_days,
             ]);
 
             HistoryBooking::create([
@@ -96,17 +108,28 @@ class UserFlowController extends Controller
         ]);
     }
 
-    // public function getOwnBookings()
-    // {
-    //     $data = Block::where("user_id", Auth::user()->id)->with(["room" =>
-    //         function ($query) {
-    //             $query->with("location");
-    //         }
-    //     ])->get();
+    /**
+     * Get My bookings
+     */
+    public function getMyBookings()
+    {
+        $data = Block::where("user_id", Auth::user()->id)->with(["room" =>
+            function ($query) {
+                $query->with("location");
+            }
+        ])->get()->setAppends(["cost"]);
 
-    //     return response_success([
-    //         "ok" => true,
-    //         "data" => $data,
-    //     ]);
-    // }
+        $general_cost = 0;
+        $general_current_cost = 0;
+        $data->map(function  ($item) use (&$general_cost, &$general_current_cost) {
+            $general_current_cost =  $general_current_cost += $item->cost["current_cost"];
+            $general_cost =  $general_cost += $item->cost["general_cost"];
+        });
+        return response_success([
+            "ok" => true,
+            "data" => $data,
+            "general_cost" => $general_cost,
+            "general_current_cost" => $general_current_cost,
+        ]);
+    }
 }
